--- a/sb-api/pom.xml
+++ b/sb-api/pom.xml
@@ -103,6 +103,31 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jaxb2-maven-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <id>xjc</id>
+            <goals>
+              <goal>xjc</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <xjbSources>
+            <xjbSource>./jaxb-config.xjb</xjbSource>
+          </xjbSources>
+          <sources>
+            <source>./src/main/resources/response.xsd</source>
+            <source>./src/main/resources/root-entity.xsd</source>
+          </sources>
+          <outputDirectory>
+            ./target/generated-sources/jaxb2
+          </outputDirectory>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
